--- a/Learning/Word2Vec.ipynb
+++ b/Learning/Word2Vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bd5195b3",
+   "id": "ec34eb5b",
    "metadata": {},
    "source": [
     "# Word2Vec\n",
@@ -15,18 +15,18 @@
     ">\n",
     "> [Implementation](#Implementation)\n",
     ">\n",
-    "> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Pre-Trained Embeddings](#Pre-Trained-Embeddings)\n",
-    ">\n",
-    "> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Training Embeddings](#Training-Embeddings)\n",
-    ">\n",
-    "> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Preparing Word Vectors for ML Models](#Preparing-Word-Vectors-for-ML-Models)\n",
+    ">> [Pre-Trained Embeddings](#Pre-Trained-Embeddings)\n",
+    ">>\n",
+    ">> [Training Embeddings](#Training-Embeddings)\n",
+    ">>\n",
+    ">> [Preparing Word Vectors for ML Models](#Preparing-Word-Vectors-for-ML-Models)\n",
     "\n",
     "We finish the notebook off with a [review](#Review) of everything discussed. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42f9403e",
+   "id": "7807b18e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "791f6ee7",
+   "id": "2e6d7fbf",
    "metadata": {},
    "source": [
     "# Implementation\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46b68ac",
+   "id": "e4c8936c",
    "metadata": {},
    "source": [
     "### Pre-Trained Embeddings"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1642c309",
+   "id": "bced4a8d",
    "metadata": {},
    "source": [
     "We start by importing `gensim`, a package that comes with a bunch of pre-trained embeddings build in, and loading the `glove-wiki-gigaword-100` embedding (the 100 represents the length each vector should be in the embedding). "
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b82043cf",
+   "id": "cdb6177b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ec27e6cc",
+   "id": "7f004c53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5ecfcb",
+   "id": "c9fd2afb",
    "metadata": {},
    "source": [
     "Now, we'll examine the word vector for the word \"king\", and find words most similar to \"king\" based on our embeddings. "
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ffdbedc6",
+   "id": "9520f5f0",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cafaf634",
+   "id": "2e79e204",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf0a6709",
+   "id": "1a3cf1b5",
    "metadata": {},
    "source": [
     "___"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4502386",
+   "id": "749ebde5",
    "metadata": {},
    "source": [
     "### Training Embeddings"
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8feb01",
+   "id": "8184661b",
    "metadata": {},
    "source": [
     "Let's try to train our own embeddings using the `SMSSpamCollection.tsv` file. Start by loading in, and cleaning up, the file. \n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9f6f5760",
+   "id": "45a4f1b2",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c72dfe",
+   "id": "58bba070",
    "metadata": {},
    "source": [
     "Now, go ahead and split our data up into train and test sets. "
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8c6fbfa0",
+   "id": "516835ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f31f9c66",
+   "id": "1c185133",
    "metadata": {},
    "source": [
     "We need to train our word2vec model now. For now, we'll set:\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "afbb09c3",
+   "id": "fe9b0e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c89933c",
+   "id": "24699ec2",
    "metadata": {},
    "source": [
     "Now, we'll examine the word vector for the word \"king\", and find words most similar to \"king\" based on our embeddings."
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "01e8d84c",
+   "id": "4f4434ea",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f89f4f14",
+   "id": "f4ba9455",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b51a0a",
+   "id": "9d66117c",
    "metadata": {},
    "source": [
     "`Note`: This embedding don't make as much sense as the one we obtained from the pre-trained model earlier. "
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4cb96ce",
+   "id": "e95bd6ad",
    "metadata": {},
    "source": [
     "___"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb2250f",
+   "id": "570d6e73",
    "metadata": {},
    "source": [
     "### Preparing Word Vectors for ML Models"
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07fc3dd5",
+   "id": "ab56521a",
    "metadata": {},
    "source": [
     "First, we'll take a look at the words that have embeddings in our model. "
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5e1b43f5",
+   "id": "def8a42b",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498b3d18",
+   "id": "7b7b43f9",
    "metadata": {},
    "source": [
     "Now, let's generate a vector for each message in the training data based on the word vectors for each word in that message. "
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "62b8133f",
+   "id": "db41756a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f32c3cf",
+   "id": "a0ffeef4",
    "metadata": {},
    "source": [
     "A machine learning model will need the same set of features for each example it sees. In our case, each word is a feature, and the fact that messages have different numbers of words will cause issues. "
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "002b292b",
+   "id": "9e199da2",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37638616",
+   "id": "49b630b2",
    "metadata": {},
    "source": [
     "To handle this, we will average all the word vectors we have for a single message together to obtain a single word vector. "
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "97dbabf3",
+   "id": "287fbfd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf64421b",
+   "id": "cc6592c6",
    "metadata": {},
    "source": [
     "We check to make sure this fixed our problem. "
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0085395a",
+   "id": "55820adf",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919fe630",
+   "id": "cda5bce5",
    "metadata": {},
    "source": [
     "Now our features are ready to be used in a machine learning model. "
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974e2cef",
+   "id": "a341b336",
    "metadata": {},
    "source": [
     "___"
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10053ac0",
+   "id": "1eab4e96",
    "metadata": {},
    "source": [
     "## Review"
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0411228a",
+   "id": "f7050e86",
    "metadata": {},
    "source": [
     "In this notebook, we introduced Word2Vec, an embedding algorithm that takes a text corpus as input and outputs a vector representation for each word in the corpus. \n",
